# Previous-projects

./: README.md
2-course/Construction-and-analysis-of-algorithms/Kryventsova_Lyubov_lb1/: lb1.cpp
2-course/OOP/lb5/: Krivencova_Lyubov_lb5.docx
2-course/OOP/withLogger/: Krivencova_Lyubov_lb3.docx
2-course/OS/lab1/: lb1_com.asm  lb1_exe.asm
2-course/OS/lab2/: lb2.asm
2-course/OS/lab5/: laba5.asm  lb3.asm
2-course/OS/lab6/: laba2.asm  laba6.asm
2-course/OS/lab7/: lab7.asm  lab7.asm.bak  ovl1.asm  ovl2.asm
2-course/Сomputer-mathematics/: 0382_Kryventsova_LS_KM.py  Выходные_данные.txt  Исходные данные.txt
3-course/Parallel-algorithms/lab00/: lab00.cpp
3-course/Parallel-algorithms/lab01/: lab01.cpp
3-course/Parallel-algorithms/lab1/: lab1.cpp
3-course/Parallel-algorithms/lab2/: lab2.cpp
3-course/Parallel-algorithms/lab3/: lab3.cpp
3-course/Probability-and-Mathematics-statistics/: lab2.ipynb  lab3.ipynb  lab4.ipynb
Coursework/: description
Coursework/Code/: first_word.c  first_word.h  right_proposal.c  right_proposal.h  str_data.h  structs.h
Game/: CMakeLists.txt  main.cpp
Game/src/: Box.cpp  Box.h  Cell.h  Cellule.cpp  Cellule.h  CelluleView.cpp  CelluleView.h  Characters.h  Field.cpp  Field.h  FieldView.cpp  FieldView.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Interior.h  Item.h  Player.cpp  Player.h  field.txt  new.txt  structs.h
OOP/lb6/: Krivencova_Lyubov_lb6.docx
OOP/src/: Cell.h  Cellule.h  CelluleView.h  Field.cpp  Field.h  main.cpp
OOP/withLogger/: Krivencova_Lyubov_lb3.docx
Web/1lab/: newserver.csr  nginx.conf
(+212 files in other folders)
